Add proper logging and use property values